added supabase and auth

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "lucide-react": "^0.263.1",
     "jspdf": "^2.5.1",
     "html2canvas": "^1.4.1",
-    "date-fns": "^2.30.0"
+    "date-fns": "^2.30.0",
+    "@supabase/supabase-js": "^2.38.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
