--- a/netlify.toml
+++ b/netlify.toml
@@ -4,6 +4,7 @@
 
 [build.environment]
   NODE_VERSION = "18"
+  SECRETS_SCAN_OMIT_PATHS = "SUPABASE_SETUP.md,PASSWORD_RESET_FEATURE.md,IMPLEMENTATION_SUMMARY.md"
 
 [[redirects]]
   from = "/*"
