Fix Netlify secrets scanning by whitelisting Supabase public keys

--- a/netlify.toml
+++ b/netlify.toml
@@ -4,7 +4,7 @@
 
 [build.environment]
   NODE_VERSION = "18"
-  SECRETS_SCAN_OMIT_PATHS = "SUPABASE_SETUP.md,PASSWORD_RESET_FEATURE.md,IMPLEMENTATION_SUMMARY.md"
+  SECRETS_SCAN_OMIT_KEYS = "VITE_SUPABASE_ANON_KEY,VITE_SUPABASE_URL"
 
 [[redirects]]
   from = "/*"
